# atomic

./: .gitignore  CMakeLists.txt  check.sh  classExample.cpp  prueba  pruebas.cpp
apps/: CMakeLists.txt  atomic_app_adv.cpp  atomic_app_base.cpp  lock_app_adv.cpp  lock_app_base.cpp  seq_app.cpp
include/: .locked_buffer.h.swp  atomic_buffer.h  locked_buffer.h
solution/: 0.txt  4.txt  5.txt  6.txt  7.txt
